# Minecli-launcher

./: .gitignore  CMakeLists.txt  Minecli-launcher.sln  README.md  build.bat  build.sh  xmake.lua
minecli/: Application.cpp  Application.h  ArgsParser.cpp  ArgsParser.h  ArgumentException.cpp  ArgumentException.h  ArgumentException.hpp  ArgumentsParser.cpp  ArgumentsParser.h  ArgumentsParser.hpp  Auth.cpp  Auth.h  CMakeLists.txt  Colors.h  Command.h  Command.hpp  Constants.hpp  IArgumentsParser.h  LoginCommand.cpp  LoginCommand.h  LoginCommand.hpp  Main.cpp  MicrosoftApiClient.hpp  MicrosoftResponse.hpp  Option.cpp  Option.h  Option.hpp  Parser.cpp  Parser.h  TestCommand.cpp  TestCommand.hpp  main.cpp  minecli.vcxproj  minecli.vcxproj.filters
src/: Application.cpp  Application.h  ArgsParser.cpp  ArgsParser.h  MicrosoftAuth.cpp  MicrosoftAuth.h  Vanilla.h  main.cpp  utils.cpp  utils.h
